--- a/SMS-AlertAPI/SMS-AlertAPI.csproj
+++ b/SMS-AlertAPI/SMS-AlertAPI.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
+    <PackageReference Include="Twilio" Version="6.10.0" />
   </ItemGroup>
 
 </Project>
