Create Twilio env variables

--- a/SMS-AlertAPI/appsettings.json
+++ b/SMS-AlertAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Twilio": {
+    "AccountSid": "AC8f6e9ad0df27f1af2fad6fedf9230a24",
+    "AuthToken": "6098f701c2436c32331b3953d8a40b3c"
+  }
 }
